Add debug plugins to neovim; Add pane resize keybindings to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,8 @@
 
 # README
 #===================================================================
-# tmux-mem-cpu-load must be installed to function
+# tmux-mem-cpu-load must be installed to function since tpm just
+#  clones the soruce
 # cmake .
 # make
 # make install
@@ -105,11 +106,24 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
 bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\\ select-pane -l
+
+# Smart pane resizing with awareness of Vim splits.
+# See: https://github.com/RyanMillerC/better-vim-tmux-resizer
+bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "resize-pane -L 10"
+bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "resize-pane -D 5"
+bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "resize-pane -U 5"
+bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "resize-pane -R 10"
+
+bind-key -T copy-mode-vi M-h resize-pane -L 10
+bind-key -T copy-mode-vi M-j resize-pane -D 5
+bind-key -T copy-mode-vi M-k resize-pane -U 5
+bind-key -T copy-mode-vi M-l resize-pane -R 10
 #--------------------------------------------------------------#
 
 #--------------------------------------------------------------#
@@ -171,6 +185,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
