switch back to alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,6 +32,7 @@ set -g default-terminal "tmux-256color"
 # set -ga terminal-overrides ",xterm-256color:Tc"
 # -- Use this value for alacritty
 set -ga terminal-overrides ",alacritty:Tc"
+set-option -sa terminal-features ',alacritty:RGB'
 
 set -g base-index 1
 set -g pane-base-index 1
