switch to fzf-lua, fzf update, colorscheme update

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,7 @@
 #===================================================================
 
 # This should be before any 'run' command, attempting to fix error 127
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:$HOME/bin"
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:$HOME/bin:$HOME/.fzf/bin"
 
 # easy tmux reload <prefix> r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
