neovim and tmux updates

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,11 +18,17 @@
 # This should be before any 'run' command, attempting to fix error 127
 set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:$HOME/bin:$HOME/.fzf/bin"
 
+# added after upgrade to 24.04
+set-environment -g DISPLAY $DISPLAY
+# set-environment -g WAYLAND_DISPLAY $WAYLAND_DISPLAY
+
 # easy tmux reload <prefix> r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 # set mouse mode to allow use of mouse for copying, scrolling, etc.
 set -g mouse on
+
+# set-option -g set-clipboard on
 
 set -g default-terminal "tmux-256color"
 
@@ -162,6 +168,7 @@ set -g status-right '#[fg=$onedark_white,bg=$onedark_visual_grey]#(~/.tmux/kube-
 setw -g mode-keys vi
 
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "wl-copy"
 
 # macos: brew install reattach-to-user-namespace
 # copy
